--- a/css/login.css
+++ b/css/login.css
@@ -10,6 +10,10 @@ body {
   /* Margin bottom by footer height */
   padding: 0;
   margin: 0;
+  background-color: #e1e7e9;
+  background-image: url("../images/header.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .footer {
@@ -37,4 +41,9 @@ body {
 }
 .container .text-muted {
   margin: 0 0;
+}
+
+.login-box {
+  background-color: rgba(0,0,0,0.2);
+  border-radius: 20px;
 }
